fixed some aligns on boxes

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
     background-color: rgb(0, 0, 0);
+    font-family: sans-serif;
 }
 
 .recipeLink {
     color: white;
     background-color: black;
-    display: inline-block;
+    display: block;
     padding: 10px 15px;
     border-radius: 5px;
     text-decoration: none;
